[project]
name = "uea-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "tensorflow",
    "numpy",
    "Pillow",
    "pandas",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
